--- a/syncfusion-practice/package.json
+++ b/syncfusion-practice/package.json
@@ -18,7 +18,9 @@
     "@angular/platform-browser": "^18.2.0",
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
+    "@syncfusion/ej2-angular-buttons": "^26.2.10",
     "@syncfusion/ej2-angular-charts": "^26.2.14",
+    "@syncfusion/ej2-angular-schedule": "^26.2.14",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
