--- a/syncfusion-practice/package.json
+++ b/syncfusion-practice/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^18.2.0",
     "@syncfusion/ej2-angular-buttons": "^26.2.10",
     "@syncfusion/ej2-angular-charts": "^26.2.14",
+    "@syncfusion/ej2-angular-dropdowns": "^27.1.51",
     "@syncfusion/ej2-angular-schedule": "^26.2.14",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
